# singularity-installer

./: .gitignore  CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.installer.desktop
src/: app.vala  kbd.vala  main.vala  window.vala
